--- a/Config.yml
+++ b/Config.yml
@@ -3,3 +3,7 @@ plugins:
 title: Devinerecipes blog
 description: Welcome to my blog
 author: Devine Recipes 
+
+name: Crimsonfaie, Horrible Cop
+markdown: kramdown
+permalink: /blog/:year/:month/:day/:title
