--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,9 @@
 name: Hank Quinlan, Horrible Cop
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
+
+plugins:
+  - jekyll-feed
+title: Crimson Faie blog
+description: Welcome to my blog
+author: Crimson Faie
